add eng fonts and css

--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -1,5 +1,12 @@
 @import "mixins.styl"
 
+@font-face
+  font-family: brelaregular;
+  src: url(../fonts/brelaregular.otf) format('woff');
+
+html
+  font-family brelaregular
+
 .btn-fw
   wh(100%, auto)
   min-width 5rem
