--- a/src/common/stylus/mixins.styl
+++ b/src/common/stylus/mixins.styl
@@ -26,4 +26,8 @@ flex-center()
   flex-center-h()
   align-items center
 
+bg-image(imgurl)
+  background url(imgurl) no-repeat
+  background-size 100% 100%
+  background-position 0 0
 
