--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -31,9 +31,9 @@ html
   opacity: 0.6
 
 .hoverable
-  box-shadow: 0 0 .1rem .1rem rgba(10, 10, 10, 0.1)
+  box-shadow: 0 0 .05rem .01rem rgba(100, 100, 100, 0.1)
   transition box-shadow .5s
 
 .hoverable:hover
-  box-shadow: 0 0 4em .2rem rgba(10, 10, 10, 0.1)
-  transition box-shadow .5s
+  box-shadow: 0 0 1rem .5rem rgba(50, 50, 50, 0.1)
+
