--- a/src/common/stylus/mixins.styl
+++ b/src/common/stylus/mixins.styl
@@ -11,6 +11,7 @@ fullscreen()
   left: 0
   top: 0
 
+
 shadow-bg()
   box-shadow: 0 0 3.5em .3em rgba(10, 10, 10, 0.1)
 
@@ -23,7 +24,8 @@ flex-center-v()
   flex-direction column
 
 flex-center()
-  flex-center-h()
+  display: flex
+  justify-content center
   align-items center
 
 bg-image(imgurl)
