add pager css and svg font

--- a/src/common/css/icomoon.css
+++ b/src/common/css/icomoon.css
@@ -30,3 +30,13 @@
 .icon-price-tags:before {
   content: "\e936";
 }
+
+.icon-search:before {
+  content: "\e986";
+}
+.icon-arrow-right:before {
+  content: "\ea3c";
+}
+.icon-arrow-left:before {
+  content: "\ea40";
+}
