--- a/src/components/blog/github.css
+++ b/src/components/blog/github.css
@@ -644,7 +644,7 @@
     overflow: auto;
     font-size: 85%;
     line-height: 1.45;
-    background-color: #f6f8fa;
+    /*background-color: #f6f8fa;*/
     border-radius: 3px;
 }
 
