add comment function

--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -37,3 +37,32 @@ html
 .hoverable:hover
   box-shadow: 0 0 1rem .5rem rgba(50, 50, 50, 0.1)
 
+.input
+  border solid 1px #ddd
+  font-size 1rem
+  outline none
+  padding 0 .5rem
+  line-height 1.8rem
+  transition all .5s
+  font-family: brelaregular;
+.input:focus,.input:hover
+  border solid 1px #6b677d
+.input::-webkit-input-placeholder
+  color: #bbb
+
+
+.textarea
+  resize none
+  font-size 1rem
+  min-height 5rem
+  min-width 30rem
+  color: #666
+  border solid 1px #ddd
+  outline none
+  padding .2rem .5rem
+  transition all .5s
+  font-family: brelaregular;
+.textarea:focus,.input:hover
+  border solid 1px #6b677d
+.textarea::-webkit-input-placeholder
+  color: #bbb
